--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@rebass/preset": "^4.0.5",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "rebass": "^4.0.7"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "eslint": "7.30.0",
